z-index fix

--- a/styles/components/ViewType/DesktopSeveral.module.sass
+++ b/styles/components/ViewType/DesktopSeveral.module.sass
@@ -188,7 +188,7 @@
         color: #444444
 
     .catalog_product_card__selector
-        z-index: 1
+        z-index: 2
         color: #444
         margin-top: 7px
         position: relative
